[gd_scene load_steps=4 format=3 uid="uid://t1pp3eahwq2q"]

[ext_resource type="Script" uid="uid://buwj48kfdcl4a" path="res://scenes/Main.gd" id="1_script"]
[ext_resource type="Script" uid="uid://bffno3qrgaj1y" path="res://scripts/PlayerManager.gd" id="2_player_manager"]
[ext_resource type="Script" uid="uid://cwho4r85i5qvq" path="res://scripts/AreaDetector.gd" id="3_area_detector"]

[node name="Main" type="Node"]
script = ExtResource("1_script")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 5

[node name="GameContainer" type="Node2D" parent="."]

[node name="PlayerManager" type="Node" parent="." groups=["player_manager"]]
script = ExtResource("2_player_manager")

[node name="AreaDetector" type="Node" parent="." groups=["area_detector"]]
script = ExtResource("3_area_detector")
